--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -19,7 +19,8 @@
     "noFallthroughCasesInSwitch": false
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "test/**/*.ts"
   ],
   "exclude": [
     "node_modules"
